[gd_scene load_steps=50 format=2]

[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Worm/Worm/Idle.png" type="Texture" id=2]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=3]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Worm/Worm/Attack.png" type="Texture" id=5]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Worm/Worm/WormStats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=9]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=10]
[ext_resource path="res://Music and Sounds/fire-burning-sound-228105.mp3" type="AudioStream" id=11]
[ext_resource path="res://Enemies/Worm.gd" type="Script" id=12]
[ext_resource path="res://UI/levelbar/barHorizontal_green_mid 200.png" type="Texture" id=13]
[ext_resource path="res://UI/levelbar/barHorizontal_red_mid 200.png" type="Texture" id=14]
[ext_resource path="res://Music and Sounds/fire-breath-6922.mp3" type="AudioStream" id=15]

[sub_resource type="ShaderMaterial" id=28]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 540, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 630, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 810, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 990, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 1080, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 1170, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 1260, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 1350, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 630, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 90, 90 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=30]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=31]
radius = 8.0
height = 2.0

[sub_resource type="CircleShape2D" id=32]
radius = 128.0

[sub_resource type="CapsuleShape2D" id=37]
radius = 8.0
height = 12.0

[sub_resource type="CircleShape2D" id=34]
radius = 32.9848

[sub_resource type="Animation" id=35]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=36]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Worm" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
material = SubResource( 28 )
frames = SubResource( 29 )
animation = "Attack"
frame = 10
playing = true
offset = Vector2( 0, -12 )

[node name="Sprite" type="Sprite" parent="."]

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 3.2, 1 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 30 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 31 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 9 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.454902 )
shape = SubResource( 32 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -13 )
shape = SubResource( 37 )

[node name="SoftCollision" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 34 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]
wander_range = 128

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 35 )
anims/Stop = SubResource( 36 )

[node name="wormSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="FireballTimer" type="Timer" parent="."]

[node name="WormBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -48.0
margin_right = 181.0
margin_bottom = -22.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 5.0
value = 5.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 13 )

[node name="WormStats" parent="." instance=ExtResource( 7 )]
max_health = 5

[node name="fireBreath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -20.0

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="FireballTimer" to="." method="_on_FireballTimer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
